fix stencil-small-reward z-index

--- a/www/sass/stencil/_small.scss
+++ b/www/sass/stencil/_small.scss
@@ -21,7 +21,7 @@
 .stencil-small-reward {
     float: right;
     position: relative;
-    z-index: 10; // see https://github.com/berekuk/questhub/issues/142
+    z-index: 3; // see https://github.com/berekuk/questhub/issues/142
     width: 89px;
     margin-left: 5px;
     text-align: center;
